[package]
name = "consensus"
version = "0.1.0"
authors = ["56428 <48052798@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
reqwest = "0.9.20"
serde = "1.0.60"
serde_json = "1.0.40"
lazy_static = ""
futures="0.1.29"
rustc-serialize = "0.3"
rand = "0.7"
rust-crypto = "^0.2"
rustc-hex = "2.0.1"
flexi_logger = "0.14"
log = "0.4"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
